--- a/website/static/website/css/talk-snippet.css
+++ b/website/static/website/css/talk-snippet.css
@@ -39,6 +39,7 @@
   flex-direction: column;
   height: 100%;
   max-height: 320px;
+  min-width: 0;  /* Allows card to shrink in grid/flex contexts */
   margin-bottom: var(--space-5);
 }
 
